big math smart rock

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,8 @@ mlua = { version = "0.4.2", features = ["luajit", "vendored"] }
 
 #Windowing and graphics
 sdl2 = { version = "0.33", features = ["bundled"] }
-luminance-sdl2 = { path = "../luminance-sdl2" }
+# luminance-sdl2 = { path = "../luminance-sdl2" }
+luminance-sdl2 = { git = "https://github.com/Lucky4Luuk/luminance-sdl2.git", branch = "main" }
 luminance-gl = ">=0.15, <0.17" #Same version as luminance-sdl2
 luminance-windowing = "0.9.3"
 luminance = "0.43.1"
@@ -23,6 +24,9 @@ luminance = "0.43.1"
 imgui = "0.4.0"
 imgui-sdl2 = "0.10.0"
 imgui-opengl-renderer = "0.8.0"
+
+#Math
+glam = "0.11.2"
 
 #Logging
 log = "*"
