--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,13 @@ imgui-opengl-renderer = "0.8.0"
 #Math
 glam = "0.11.2"
 
+#Serializing
+serde = "1.0.118"
+bincode = "1.3.1"
+
+#Model loading
+gltf = "0.15.2"
+
 #Logging
 log = "*"
 pretty_env_logger = "0.4.0"
