--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,9 @@ bincode = "1.3.1"
 #Model loading
 gltf = "0.15.2"
 
+#Shaders
+# shader-prepper = "0.2.0"
+
 #Logging
 log = "*"
 pretty_env_logger = "0.4.0"
